# suwalki-hands

./: .env.base  README.md
.claude/commands/: prime.md
ebrit-hands/: .env.example  .gitignore
ebrit-hands/.claude/skills/laminar-instrument-codebase/: SKILL.md
ebrit-hands/ebrit_hands/: .env.base  .env.example
ebrit-hands/ebrit_hands/ebrit_hands/: __main__.py  git.py  image_resolver.py  settings.py
ebrit-hands/ebrit_hands/ebrit_hands/ai/: constants.py
ebrit-hands/ebrit_hands/ebrit_hands/jobs/: __init__.py  enums.py  router.py
ebrit-hands/ebrit_hands/ebrit_hands/reviews/: agents.py  router.py  runner.py  schemas.py
ebrit-hands/ebrit_hands/ebrit_hands/tasks/: runner.py  schemas.py
ebrit-hands/ebrit_hands/images/: Dockerfile.ebrit-hands-dotnet
ebrit-hands/ebrit_hands/skills/complete-task/: SKILL.md
ebrit-hands/ebrit_hands_gitlab_channel/: .env.base  pyproject.toml
ebrit-hands/ebrit_hands_gitlab_channel/ebrit_hands_gitlab_channel/: app.py  forwarder.py  settings.py
ebrit-hands/ebrit_hands_gitlab_channel/ebrit_hands_gitlab_channel/review/: parser.py  poster.py
ebrit-hands/ebrit_hands_library/ebrit_hands_library/: constants.py  log.py
ebrit-hands/ebrit_hands_web/: .env.local.example  Dockerfile
ebrit-hands/ebrit_hands_web/src/jobs/: JobCard.tsx  (+3 more)
ebrit-hands/ebrit_hands_ytrack_channel/: .env.base  pyproject.toml
ebrit-hands/ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/: app.py  forwarder.py
ebrit-hands/ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/api/: schemas.py
ebrit-hands/ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/youtrack/: mock.py
ebrit-hands/infrastructure/: .env.example  nginx-rproxy.conf.template
ebrit-hands/scripts/: cleanup.sh  full-infrastructure-up.sh  infrastructure-down.sh  infrastructure-up.sh  laminar-down.sh  sync.sh
ebrit_hands/: pyproject.toml
ebrit_hands/ebrit_hands/: app.py
ebrit_hands/ebrit_hands/ai/: agents.py  completions.py  llm.py  workspaces.py
ebrit_hands/ebrit_hands/jobs/: models.py  registry.py
ebrit_hands/ebrit_hands/reviews/: responder.py  tools.py
ebrit_hands/ebrit_hands/tasks/: agents.py  router.py
ebrit_hands/skills/dotnet/: SKILL.md
ebrit_hands/skills/mr-description/: SKILL.md
ebrit_hands_gitlab_channel/: Dockerfile
ebrit_hands_gitlab_channel/ebrit_hands_gitlab_channel/: __main__.py
ebrit_hands_gitlab_channel/ebrit_hands_gitlab_channel/review/: router.py
ebrit_hands_gitlab_channel/ebrit_hands_gitlab_channel/webhook/: router.py  schemas.py
ebrit_hands_library/: pyproject.toml
ebrit_hands_library/ebrit_hands_library/: rest_client.py
ebrit_hands_library/ebrit_hands_library/contracts/: youtrack.py
ebrit_hands_web/: .env.base  package.json  pnpm-lock.yaml
ebrit_hands_web/src/app/: layout.tsx  page.tsx
ebrit_hands_web/src/jobs/: types.ts
ebrit_hands_web/src/lib/: ytrack-channel-client.ts
ebrit_hands_web/src/tasks/: TaskCard.tsx  types.ts
ebrit_hands_ytrack_channel/: .env.example  Dockerfile
ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/: __main__.py  settings.py
ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/api/: webhook.py
ebrit_hands_ytrack_channel/ebrit_hands_ytrack_channel/youtrack/: parser.py
infrastructure/: .env.base  docker-compose.laminar.yml  docker-compose.yml
scripts/: close-infrastructure.sh  laminar-up.sh  print-links.sh  publish-image.sh  quick-infrastructure-up.sh  run.sh
scripts/.internal/: menu.sh
(+11 files in other folders)
