[project]
name = "ebrit-hands-gitlab-channel"
version = "0.1.0"
description = "GitLab webhook channel for ebrit-hands"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ebrit-hands-library",
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "python-gitlab>=4.0.0",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ebrit-hands-library = { path = "../ebrit_hands_library", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["ebrit_hands_gitlab_channel"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
