[project]
name = "ebrit-hands-ytrack-channel"
version = "0.1.0"
description = "YouTrack webhook channel for ebrit-hands"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ebrit-hands-library",                    # shared logging and utilities (path via uv.sources)
    "fastapi>=0.136.3",           # webhook HTTP receiver
    "httpx>=0.27.0",              # async HTTP client for YouTrack REST API calls
    "pydantic-settings>=2.14.1",  # settings loaded from .env files
    "uvicorn[standard]>=0.48.0",  # ASGI server
    "youtrack-sdk>=1.0.202604210923", # official YouTrack REST API client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ebrit-hands-library = { path = "../ebrit_hands_library", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["ebrit_hands_ytrack_channel"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
